--- a/src/app/work-with-us/work-with-us.component.css
+++ b/src/app/work-with-us/work-with-us.component.css
@@ -209,3 +209,11 @@ a.btnFindOutMore2 {
   margin:5px;
   font-family: "vag_roundedregular";
 }
+
+@media screen and (max-width: 767px) {
+  .container {
+    padding: 10px !important;
+    max-width: 100% !important;
+    padding-bottom: 50px !important;
+}
+}
